editor-components/slider/slider3/slider3.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  padding: calc(var(--composer-gap-lg) * 2) 0 !important;

  .max-content {
    padding: 0 var(--composer-gap-xl);

    .header {
      flex-direction: column;
      position: relative;
      flex-wrap: nowrap;
      display: flex;

      .vertical-content {
        width: 100%;
        margin-bottom: calc(var(--composer-gap-lg) * 2);
        max-width: var(--composer-content-width);

        .subtitle,
        .title,
        .description {
          content: "";
        }
      }

      .arrows {
        position: absolute;
        bottom: var(--composer-gap-md);
        right: var(--composer-gap-xl);
        display: flex;
        align-items: center;
        gap: var(--composer-gap-md);
        flex-wrap: nowrap;
        width: fit-content;

        .nextArrow,
        .prevArrow {
          color: var(--composer-font-color-primary);
          width: 3rem;
          height: 3rem;
          font-size: 3rem;
          cursor: pointer;
          display: flex;
          align-items: center;
          justify-content: center;

          &.image {
            width: 100%;
            height: 100%;
          }
        }
      }
    }

    .no-header-titles {
      padding: var(--composer-gap-lg) var(--composer-gap-xl);
    }
  }

  .slider-parent {
    .carousel {
      width: 100%;

      :global(.slick-list) {
        :global(.slick-track) {
          display: flex;
          height: 100%;
          padding: 0 !important;

          :global(.slick-slide) {
            height: auto;
            width: 800px;
            padding: 0 !important;

            >div {
              height: 100%;

              >div,
              >a {
                height: 100%;
                display: flex;
              }
            }
          }
        }
      }

      :global(.slick-dots) {
        position: absolute;
        left: 0;
        display: flex !important;
        justify-content: center;
        align-items: center;
        list-style: none;
        padding: 0;
        margin: 0;
        width: 100% !important;
        z-index: 10;

        li {
          margin: 0 var(--composer-gap-sm);
          width: var(--composer-gap-sm);
          height: var(--composer-gap-sm);

          button {
            width: var(--composer-gap-sm);
            height: var(--composer-gap-sm);
            padding: 0;
            background: transparent;
            border: none;
            cursor: pointer;
            position: relative;

            &:before {
              content: "";
              position: absolute;
              top: 0;
              left: 0;
              width: var(--composer-gap-sm);
              height: var(--composer-gap-sm);
              border-radius: var(--composer-border-radius-full);
              background: var(--composer-font-color-primary);
              opacity: 0.5;
              transition: transform var(--composer-transition-duration-normal) ease, opacity var(--composer-transition-duration-normal) ease, background var(--composer-transition-duration-normal) ease;
              transform: scale(0.8);
              line-height: unset;
            }
          }

          &:global(.slick-active) {
            button:before {
              transform: scale(1.2);
              opacity: 1;
            }
          }
        }
      }

      .card {
        flex: 1;
        width: 100%;
        overflow: hidden;
        display: flex;
        flex-direction: column;
        justify-content: start;
        align-items: flex-start;
        transition: transform var(--composer-transition-duration-normal);
        transform: scale(0.8);
        z-index: 1;
        max-width: 900px;
        height: 100%;
        gap: 60px;
        cursor: pointer;

        &.no-media {
          .image-container {
            background-color: color-mix(in srgb,
                var(--composer-html-background),
                var(--composer-font-color-primary) 5%);
            display: block;
          }

          .content-container {
            opacity: 1;
          }
        }

        .image-container {
          width: 100%;
          overflow: hidden;
          z-index: 1;
          height: 400px;
          border-radius: var(--composer-border-radius-sm);
          position: relative;

          .image {
            width: 100%;
            height: 100%;
            object-fit: cover;
            transform: scale(1.1);
            transform-origin: center;
            z-index: 1;
            transition: transform var(--composer-transition-duration-slow) ease, filter var(--composer-transition-duration-slow) ease;

            &.hover-active:hover {
              transform: scale(1);
              filter: brightness(80%);
            }

            &:not(:hover) {
              transform: scale(1.1);
              filter: brightness(100%);
            }
          }

          .overlay {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            z-index: 2;
            background-color: var(--composer-overlay-color);
            border-radius: var(--composer-border-radius-sm);
          }
        }

        .content-container {
          opacity: 0;
          transition: opacity var(--composer-transition-duration-slow) ease;
          align-items: flex-start !important;
          text-align: left !important;

          &.active {
            opacity: 1;
          }

          .slider-subtitle {
            color: var(--composer-font-color-primary);
            margin-left: 0px;
            text-align: left;
          }

          .slider-title,
          .slider-description {
            color: var(--composer-font-color-primary);
            text-align: left;
          }
        }
      }

      .centerSlide {
        transform: scale(1);
        transition: transform var(--composer-transition-duration-normal) ease;
      }
    }

    .carousel--singleCard {
      width: 100%;
    }

    .carousel--multipleCards {
      width: auto;
    }
  }

  &.no-header {
    padding-top: 0;

    .slider-parent {
      margin-top: 0;
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    .max-content {
      padding: 0 var(--composer-gap-lg);

      .header {
        .vertical-content {
          margin-bottom: var(--composer-gap-xl) !important;
        }

        .arrows {

          .nextArrow,
          .prevArrow {
            width: 2rem;
            height: 2rem;
            font-size: 2rem;
          }
        }
      }
    }

    .slider-parent {
      .carousel {
        :global(.slick-list) {
          :global(.slick-track) {
            :global(.slick-slide) {
              width: 500px;
            }
          }
        }

        .card {
          max-width: 500px;
          gap: var(--composer-gap-xl);
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    padding: var(--composer-gap-xl) 0 !important;

    .max-content {
      padding: 0 var(--composer-gap-md);


      .header {
        .vertical-content {
          margin-bottom: var(--composer-gap-md) !important;
        }

        .arrows {
          position: relative;
          right: auto;
          bottom: auto;
          margin: 0 0 var(--composer-gap-md) auto;
        }
      }

      .no-header-titles {
        padding: var(--composer-gap-md) 0;
      }
    }

    .slider-parent {
      .carousel {
        :global(.slick-list) {
          :global(.slick-track) {
            :global(.slick-slide) {
              width: auto;
            }
          }
        }

        .card {
          .content-container {
            padding: 0 var(--composer-gap-md) !important;
          }
        }

        :global(.slick-dots) {
          li {
            button {
              width: var(--composer-gap-sm) !important;
              height: var(--composer-gap-sm) !important;

              &:before {
                width: var(--composer-gap-sm) !important;
                height: var(--composer-gap-sm) !important;
                transform: scale(0.6);
              }
            }

            &:global(.slick-active) {
              button:before {
                transform: scale(1);
              }
            }
          }
        }
      }
    }
  }
}

